--- a/haskell/segmented-cfmm.cabal
+++ b/haskell/segmented-cfmm.cabal
@@ -77,6 +77,7 @@ test-suite segmented-cfmm-test
   other-modules:
       Test.SegCFMM
       Test.SegCFMM.Contract
+      Test.SegCFMM.Storage
       Test.SegCFMM.Types
       Paths_segmented_cfmm
   hs-source-dirs:
