--- a/haskell/segmented-cfmm.cabal
+++ b/haskell/segmented-cfmm.cabal
@@ -14,7 +14,8 @@ license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
-    test/segmented_cfmm.tz
+    test/segmented_cfmm_default.tz
+    test/storage_default.tz
 extra-doc-files:
     README.md
 
