[TCFMM-14] Add tests for FA2 position handling and fix some bugs
Problem: There are no tests for FA2 entrypoints used to manipulate
positions in the contract.

Solution: Add some unit and property tests for FA2 entrypoints.
Additionally, fix the bug found in doing so, namely:
- limit operators to a single token_id (per owner)
- allow transfer of 0 for non-existing positions
- correct error when transferring an amount higher than 1

--- a/haskell/segmented-cfmm.cabal
+++ b/haskell/segmented-cfmm.cabal
@@ -179,6 +179,11 @@ test-suite segmented-cfmm-test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
+      Test.FA2
+      Test.FA2.BalanceOf
+      Test.FA2.Common
+      Test.FA2.Transfer
+      Test.FA2.UpdateOperators
       Test.Invariants
       Test.LiquidityMining.Contract
       Test.Math
